--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div>
             
-            <img src="images/img1.jpg" alt="img1" id="img1">
+            <img src="img1.jpg" alt="img1" id="img1">
         </div>
         <div class="info">
             <form action="/" method="POST">
